tests/baselines/reference/YieldExpression11_es6.errors.txt
YieldExpression11_es6.ts(3,11): error TS2663: Cannot find name 'foo'. Did you mean the instance member 'this.foo'?


==== YieldExpression11_es6.ts (1 errors) ====
    class C {
      *foo() {
        yield(foo);
              ~~~
!!! error TS2663: Cannot find name 'foo'. Did you mean the instance member 'this.foo'?
      }
    }